2012-05-10  Igor Pashev  <pashev.igor@gmail.com>

	* hyper/initx.c: Fixed spelling errors.
	* hyper/macro.c (parse_macro): Likewise.
	* sman/sman.c (manage_spad_io): Likewise.

2012-05-09  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/io.boot (carriageRetChar?): New.
	(trimCarriageReturn): Likewise.
	(expandLeadingTabs): Likewise.
	* interp/preparse.lisp: Use it.
	* interp/incl.boot: Likewise.
	* interp/i-syscmd.boot: Likewise.

2012-05-09  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/preparse.lisp (PREPARSE): Move to spad-parser.boot.
	Rename as preparse.

2012-05-09  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/preparse.lisp (FINCOMBLOCK): Move to spad-parser.boot.
	Rename as findCommentBlock.

2012-05-09  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/preparse.lisp (PREPARSE-ECHO): Move to spad-parser.boot.
	Rename as preparseEcho.
	* lisp/core.lisp.in (formatToStream): New.

2012-05-08  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* boot/tokens.boot: Export char.  Do not rename maxIndex.
	* lisp/core.lisp.in (maxIndex): Define and export.
	* interp/bootlex.lisp: Adjust.
	* interp/parsing.lisp: Likewise.
	* interp/macros.lisp: Likewise.
	(DROPTRAILINGBLANKS): Remove.
	(BLANKP): Likewise.
	(NONBLANKLOC): Likewise.
	* interp/io.boot (trimTrailingBlank): New.
	(firstNonblankCharPosition): Likewise.
	* interp/preparse.lisp: Use them. Adjust.
	* interp/sys-macros.lisp (char): Remove.
	* interp/vmlisp.lisp (MAXINDEX): Likewise.
	* interp/br-search.boot (pmTransFilter): Fix bogus uses of char.
	* interp/debug.lisp: Likewise.
	* interp/g-util.boot: Likewise.
	* interp/ht-root.boot: Likewise.
	* interp/i-output.boot: Likewise.
	* interp/i-syscmd.boot: Likewise.

2012-05-07  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/spad.lisp (INIT-BOOT/SPAD-READER): Don't set FILE-CLOSED.
	(SPAD): Tidy.
	* interp/spad-parser.boot (parseSpadFile): Do not test for *EOF*
	or FILE-CLOSED.
	* interp/preparse.lisp (INITIALIZED-PREPARSE): Use readLine.
	(preparseReadLine1): Likewise.